# xlsx_writer

./: .credo.exs  .formatter.exs  .gitignore  CHANGELOG.md  Cargo.toml  README.md  checksum-Elixir.Spreadsheet.Calamine.exs  checksum-Elixir.XlsxWriter.RustXlsxWriter.exs  demo.xlsx  demo2.xlsx  demo3.xlsx  mix.exs
.github/workflows/: release.yml  tests.yml
config/: config.exs
examples/: builder_demo.exs  comments_demo.exs  comprehensive_demo.exs
guides/: builder_api.md  formatting.md  getting_started.md  layout_features.md
lib/: xlsx_writer.ex
lib/xlsx_writer/: builder.ex  error.ex  note_options.ex  rust_xlsx_writer.ex  validation.ex
native/rustxlsxwriter/: Cargo.toml  README.md
native/rustxlsxwriter/src/: lib.rs
native/xlsx_writer/: Cargo.toml  README.md
native/xlsx_writer/src/: lib.rs
test/: xlsx_writer_test.exs
test/xlsx_writer/: builder_test.exs  comment_test.exs
