[package]
name = "rustxlsxwriter"
version = "0.1.2"
authors = []
edition = "2021"

[lib]
name = "rustxlsxwriter"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
rust_xlsxwriter = "0.86.1"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
