[package]
name = "xlsx_writer"
version = "0.7.2"
authors = []
edition = "2021"

[lib]
name = "xlsx_writer"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.2"
rust_xlsxwriter = "0.92.2"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
